# Python-FastAPI-project

./: README.md  auth.py  config.py  models.py  pyproject.toml  snippets.txt
routers/: posts.py  users.py
templates/: account.html  error.html  layout.html  post.html
